<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            style="@style/TextTitle"
            android:layout_width="match_parent"
            android:layout_marginTop="24dp"
            android:layout_marginBottom="16dp"
            android:gravity="center"
            android:text="@string/app_introduction_title"
            android:textColor="@color/text_black"
            android:textSize="24sp" />

        <TextView
            style="@style/TextBody"
            android:layout_width="match_parent"
            android:layout_marginBottom="12dp"
            android:text="@string/app_introduction"
            android:textColor="@color/text_black"
            android:textSize="16sp" />

        <com.google.android.material.card.MaterialCardView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_margin="16dp"
            app:cardCornerRadius="16dp">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:padding="20dp">

                <TextView
                    style="@style/TextTitle"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:text="@string/please_select_your_language_settings"
                    android:textSize="16sp" />

                <RadioGroup
                    android:id="@+id/language_group"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <RadioButton
                        android:id="@+id/kannada_button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:onClick="onRadioButtonClicked"
                        android:text="@string/kannada"
                        android:textSize="16sp" />

                    <RadioButton
                        android:id="@+id/tamil_button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:onClick="onRadioButtonClicked"
                        android:text="@string/tamil"
                        android:textSize="16sp" />

                    <RadioButton
                        android:id="@+id/hindi_button"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_margin="10dp"
                        android:onClick="onRadioButtonClicked"
                        android:text="@string/hindi"
                        android:textSize="16sp" />
                </RadioGroup>

            </LinearLayout>
        </com.google.android.material.card.MaterialCardView>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="20dp"
            android:text="Tips"
            android:textColor="@color/text_black"
            android:textSize="14sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:text="1. You can swipe from the top to refresh the video on any page."
            android:textSize="14sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_marginBottom="10dp"
            android:text="2. You can change the video language in the settings at any time."
            android:textSize="14sp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:text="3. You can provide input and feedback using the contact information provided in the About section of the app."
            android:textSize="14sp" />

    </LinearLayout>
</ScrollView>
