<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/background"
    android:orientation="vertical">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/chapter_toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="?attr/colorPrimary"
        android:theme="@style/ThemeOverlay.MaterialComponents.Dark.ActionBar" />

    <androidx.swiperefreshlayout.widget.SwipeRefreshLayout
        android:id="@+id/swipe_to_refresh"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="?attr/actionBarSize">

        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <FrameLayout
                    android:id="@+id/main_media_frame"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="#000000"
                    android:orientation="vertical">

                    <com.google.android.exoplayer2.ui.SimpleExoPlayerView
                        android:id="@+id/chapter_media"
                        android:layout_width="match_parent"
                        android:layout_height="224dp"
                        android:scaleType="centerInside"
                        app:show_buffering="when_playing" />

                </FrameLayout>

                <TextView
                    android:id="@+id/chapter_notes_header_text_view"
                    style="@style/TextTitle"
                    android:text="@string/chapter_notes"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/chapter_notes_text_view"
                    style="@style/TextBody"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/additional_reading_header_text_view"
                    style="@style/TextTitle"
                    android:text="@string/additional_reading"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/additional_reading_text_view"
                    style="@style/TextBody"
                    android:visibility="gone" />

                <View
                    android:layout_width="match_parent"
                    android:layout_height="48dp" />


            </LinearLayout>

        </ScrollView>

    </androidx.swiperefreshlayout.widget.SwipeRefreshLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        android:orientation="vertical">

        <TextView
            android:id="@+id/part_number_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textSize="12sp" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal">

            <com.google.android.material.button.MaterialButton
                android:id="@+id/previous_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:enabled="false"
                android:text="@string/previous"
                android:textColor="@color/text_black"
                android:visibility="gone" />

            <com.google.android.material.button.MaterialButton
                android:id="@+id/next_button"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_margin="5dp"
                android:layout_weight="1"
                android:enabled="false"
                android:text="@string/next"
                android:textColor="@color/text_black"
                android:visibility="gone" />

        </LinearLayout>

    </LinearLayout>

    <ProgressBar
        android:id="@+id/chapter_progress_bar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:visibility="gone" />

</FrameLayout>